--- a/public/views/index.html
+++ b/public/views/index.html
@@ -26,6 +26,6 @@
 			<router-view></router-view>
 		</main>
 
-		<script src="/assets/js/bundle.js" defer></script>
+		<script src="/assets/js/bundle.js"></script>
 	</body>
 </html>
